force-app/main/default/objects/Contact/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level One</fullName>
            </value>
            <value>
                <fullName>Level Two</fullName>
            </value>
            <value>
                <fullName>Level Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>