force-app/main/default/objects/Contact/fields/Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Birth_Month__c</fullName>
    <label>Birth Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>