force-app/main/default/objects/Contact/fields/Current_Session__c.field-meta.xml
<CustomField>
    <fullName>Current_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Youth</relationshipLabel>
    <relationshipName>Youth</relationshipName>
    <type>Lookup</type>
</CustomField>