force-app/main/default/objects/Contact/fields/ELL__c.field-meta.xml
<CustomField>
    <fullName>ELL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ELL</label>
    <type>Checkbox</type>
</CustomField>