force-app/main/default/objects/Contact/fields/Exited_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exited_Reason__c</fullName>
    <label>Exited Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moved Away Permanently</fullName>
            </value>
            <value>
                <fullName>Moved Away Temporarily</fullName>
            </value>
            <value>
                <fullName>Parent Withdrew</fullName>
            </value>
            <value>
                <fullName>Other Commitments</fullName>
            </value>
            <value>
                <fullName>Not Satisfied</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>