force-app/main/default/objects/Contact/fields/Exited_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Exited_Reason_Details__c</fullName>
    <label>Exited Reason Details</label>
    <type>TextArea</type>
</CustomField>