force-app/main/default/objects/Contact/fields/Free_Reduced_Lunch_Status__c.field-meta.xml
<CustomField>
    <fullName>Free_Reduced_Lunch_Status__c</fullName>
    <label>Free/Reduced Lunch Status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>