force-app/main/default/objects/Contact/fields/Highest_Chapter_Completed__c.field-meta.xml
<CustomField>
    <fullName>Highest_Chapter_Completed__c</fullName>
    <label>Highest Chapter Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>