force-app/main/default/objects/Contact/fields/Is_Primary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Approver</label>
    <type>Checkbox</type>
</CustomField>