force-app/main/default/objects/Contact/fields/Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent/Guardian</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Youth</relationshipLabel>
    <relationshipName>Parents_Guardians</relationshipName>
    <type>Lookup</type>
</CustomField>