force-app/main/default/objects/Contact/fields/Parent_Guardian_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_ID__c</fullName>
    <formula>Parent_Guardian__r.Id</formula>
    <label>Parent/Guardian ID</label>
    <type>Text</type>
</CustomField>