force-app/main/default/objects/Contact/fields/Parent_Guardian_is_Active_Military__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_is_Active_Military__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent/Guardian is Active Military</label>
    <type>Checkbox</type>
</CustomField>