force-app/main/default/objects/Contact/fields/Parent_Guardian_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Phone__c</fullName>
    <label>Parent/Guardian Phone</label>
    <type>Phone</type>
</CustomField>