force-app/main/default/objects/Contact/fields/Parent_Guardian_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Record_Type__c</fullName>
    <formula>Parent_Guardian__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent/Guardian Record Type</label>
    <type>Text</type>
</CustomField>