force-app/main/default/objects/Contact/fields/Parent_is_Currently_Incarcerated__c.field-meta.xml
<CustomField>
    <fullName>Parent_is_Currently_Incarcerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent is Currently Incarcerated</label>
    <type>Checkbox</type>
</CustomField>