force-app/main/default/objects/Contact/fields/Peer_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Peer_Mentor__c</fullName>
    <label>Peer Mentor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>