force-app/main/default/objects/Contact/fields/Peer_Mentor_in_Current_Grant__c.field-meta.xml
<CustomField>
    <fullName>Peer_Mentor_in_Current_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer Mentor in Current Grant</label>
    <type>Checkbox</type>
</CustomField>