force-app/main/default/objects/Contact/fields/Previous_PAL_Member__c.field-meta.xml
<CustomField>
    <fullName>Previous_PAL_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous PAL Member</label>
    <type>Checkbox</type>
</CustomField>