force-app/main/default/objects/Contact/fields/Prior_FLL_Jr_Experience__c.field-meta.xml
<CustomField>
    <fullName>Prior_FLL_Jr_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior FLL Jr. Experience?</label>
    <type>Checkbox</type>
</CustomField>