force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Finance Coordinator</fullName>
            </value>
            <value>
                <fullName>Program Coordinator</fullName>
            </value>
            <value>
                <fullName>Site Coordinator</fullName>
            </value>
            <value>
                <fullName>Board Chair</fullName>
            </value>
            <value>
                <fullName>Program Lead</fullName>
            </value>
            <value>
                <fullName>Fund Development Lead</fullName>
            </value>
            <value>
                <fullName>Marketing/Recruitment Lead</fullName>
            </value>
            <value>
                <fullName>Finance Lead</fullName>
            </value>
            <value>
                <fullName>Secondary Signer</fullName>
            </value>
            <value>
                <fullName>Grant Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>