force-app/main/default/objects/Contact/fields/Role_in_Program__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Program__c</fullName>
    <label>Role in Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>