force-app/main/default/objects/Contact/fields/Session_One_2017__c.field-meta.xml
<CustomField>
    <fullName>Session_One_2017__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session One - 2017</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Youth (Session One - 2017)</relationshipLabel>
    <relationshipName>Youth2017</relationshipName>
    <type>Lookup</type>
</CustomField>