force-app/main/default/objects/Contact/fields/Session_Two_2018__c.field-meta.xml
<CustomField>
    <fullName>Session_Two_2018__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Two - 2018</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Youth (Session Two - 2018)</relationshipLabel>
    <relationshipName>Youth2018</relationshipName>
    <type>Lookup</type>
</CustomField>