force-app/main/default/objects/Contact/fields/Single_Parent_Home__c.field-meta.xml
<CustomField>
    <fullName>Single_Parent_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Parent Home</label>
    <type>Checkbox</type>
</CustomField>