force-app/main/default/objects/Contact/fields/Special_Education_Disability__c.field-meta.xml
<CustomField>
    <fullName>Special_Education_Disability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Education/Disability</label>
    <type>Checkbox</type>
</CustomField>