force-app/main/default/objects/Contact/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>