force-app/main/default/objects/Contact/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <label>User Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Assessment Only</fullName>
            </value>
            <value>
                <fullName>Program Admin</fullName>
            </value>
            <value>
                <fullName>All Access</fullName>
            </value>
            <value>
                <fullName>Inactive User</fullName>
            </value>
            <value>
                <fullName>Level One</fullName>
            </value>
            <value>
                <fullName>Level Two</fullName>
            </value>
            <value>
                <fullName>Level Three</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Report Builder</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>