force-app/main/default/objects/Contact/fields/Youth_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Youth_ID_Number__c</fullName>
    <label>Youth ID  Number</label>
    <type>AutoNumber</type>
</CustomField>