force-app/main/default/objects/Contact/recordTypes/Parent_Guardian.recordType-meta.xml
<RecordType>
    <fullName>Parent_Guardian</fullName>
    <active>true</active>
    <label>Parent/Guardian</label>
</RecordType>