force-app/main/default/objects/Contact/listViews/Youth.recordType-meta.xml
<RecordType>
    <fullName>Youth</fullName>
    <active>true</active>
    <label>Youth</label>
</RecordType>