force-app/main/default/objects/Contact/listViews/LocalContacts.listView-meta.xml
<ListView>
    <fullName>LocalContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FirstPic_National_Org_Code__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Role__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Is_Community_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organization_Type__c</field>
        <operation>equals</operation>
        <value>Local Organization</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Contact.Youth</value>
    </filters>
    <label>Local Contacts</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>