force-app/main/default/objects/Contact/listViews/NationalContacts.listView-meta.xml
<ListView>
    <fullName>NationalContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Role__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Is_Primary_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contact</value>
    </filters>
    <filters>
        <field>Organization_Type__c</field>
        <operation>equals</operation>
        <value>National Organization</value>
    </filters>
    <label>National Contacts</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>